fix background image issue on ios

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,21 +1,3 @@
-body {
-    @include background-image;
-
-    @include media-breakpoint-up(md) {
-        @include media2x {
-            background-image: url(/images/bg@2x.jpg);
-        }
-    }
-
-    @include media-breakpoint-down(md) {
-        background-size: 120%;
-    }
-
-    @include media-tall-narrow {
-        background-image: none;
-    }
-}
-
 .container {
     max-width: 1240px;
     padding: 0 2rem;
