--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,12 +1,3 @@
-@mixin background-image($attachment: fixed) {
-    background-image: url(/images/bg.jpg);
-    background-size: contain;
-    background-position: right bottom;
-    background-repeat: no-repeat;
-    background-color: #fff;
-    background-attachment: $attachment;
-}
-
 @mixin control-transition() {
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -43,11 +34,11 @@
 
 @mixin media-tall-narrow($orientation: portrait) {
     @if $orientation == portrait {
-        @media (max-width: map-get($breakpoints, sm) - 1) and (min-height: map-get($breakpoints, md)) and (max-height: map-get($breakpoints, lg) - 1) {
+        @media (max-width: map-get($breakpoints, sm) - 1) and (min-height: map-get($breakpoints, md)) {
             @content;
         }
     } @else if $orientation == landscape {
-        @media (min-width: map-get($breakpoints, md)) and (max-width: map-get($breakpoints, lg) - 1) and (max-height: map-get($breakpoints, sm) - 1) {
+        @media (min-width: map-get($breakpoints, md)) and (max-height: map-get($breakpoints, sm) - 1) {
             @content;
         }
     } @else {
